app/assets/stylesheets/modules/_notifications.scss
.notification-button {
  &:before  {
    font-family: "Glyphicons Halflings";
    content: "\e123";
  }

}

.unread-notifications {
    &:before  {
    color: $brand-primary;
  }
}

.unread {
  background-color: $gray-lighter;
}

.notifications-menu {
   min-width:420px;
   color: $dark-color;
   background-color: $white !important;
}

.notifications-wrapper {
  overflow:auto;
  max-height:250px;
}

.menu-title {
  font-size:1.5rem;
  display:inline-block;
}

.notification-heading, .notification-footer  {
  padding:2px 10px;
}

li.notification-divider {
  margin:5px 0;
  border-bottom: 1px solid #e5e5e5;
}

.notification-item {
  padding:10px;
  margin:5px;
  border-radius:4px;
  font-size:12px;
}

.notification-index-list {
  list-style: none;
}

.notification-time {
  font-size: 10px;
  color: $gray-light;
}

